--- a/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
@@ -50,10 +50,9 @@
 			<h:outputText value="#{lbl.lbl_noEntry}" rendered="#{ViewItemFull.isStatePending}"/>
 			</span>
 			<h:panelGroup styleClass="large_area0_p8 lineToolSection socialBookmarking" rendered="#{!ViewItemFull.isStatePending}">
-				<h:panelGroup layout="block" styleClass="sectionTool min_imgArea">
-					<h:panelGroup layout="block" styleClass="citeulikebookmark sectionTool">
-						<h:graphicImage id="imgSocialBookmarkingCiteULike" title="#{lbl.ViewItemFull_lblSocialBookmarking_CiteULike}" styleClass="pointer" url="http://static.citeulike.org/img/slogo.gif" height="28" width="112" onclick="citeULikeLink();"/>
-					</h:panelGroup>
+				
+				<h:panelGroup layout="block" styleClass="citeulikebookmark">
+					<h:graphicImage id="imgSocialBookmarkingCiteULike" title="#{lbl.ViewItemFull_lblSocialBookmarking_CiteULike}" url="http://static.citeulike.org/img/slogo.gif" height="28" width="112" onclick="citeULikeLink();"/>
 				</h:panelGroup>
 				<script type="text/javascript">
 					function citeULikeLink() {
