update for researcher portfolio - page title

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
@@ -806,6 +806,10 @@ body .wrapper {
 .header.alternateHeader .metaMenu .logoAlternate a {
 	background-color:transparent;
 }
+/*important for header in researcher portfolio*/
+.headerSection.portfolio {
+	margin-top:1.1818em;
+}
 
 /***** PRE-HEADER *****/
 .preListHeader {
