--- a/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
@@ -67,7 +67,7 @@
 					}
 				</script>
 				<!-- http://static.delicious.com/img/delicious.small.gif -->
-				<h:graphicImage id="imgSocialBookmarkingDelicious" title="#{lbl.ViewItemFull_lblSocialBookmarking_Delicious}" styleClass="min_imgArea sectionTool pointer" url="http://static.delicious.com/img/delicious.small.gif" onclick="deliciousLink();"/>
+				<h:graphicImage id="imgSocialBookmarkingDelicious" title="#{lbl.ViewItemFull_lblSocialBookmarking_Delicious}" styleClass="min_imgArea sectionTool pointer" url="http://www.stadtbibliothek-guetersloh.de/images/social/delicious.png" onclick="deliciousLink();"/>
 				<script type="text/javascript">
 					function deliciousLink() {
 						window.open('http://delicious.com/save?v=5&amp;noui&amp;jump=close&amp;url='+encodeURIComponent('<h:outputText value="#{ViewItemFull.citationURL}"/>')+'&amp;title='+encodeURIComponent('<h:outputText value="#{lbl.ViewItemFull_lblSocialBookmarkingDescription}"/> <h:outputText converter="JavascriptEscapeConverter" value="#{ViewItemFull.pubItem.metadata.title.value}"/>'), 'delicious','toolbar=no,width=550,height=550');
