modified for browse by year headline selection

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
@@ -823,7 +823,9 @@ body .wrapper {
 .listHeader a:hover {
 	text-decoration:underline;
 }
-
+table#selSelectDate .huge_radioBtn label {	/*browse by year */
+	width:25em !important;
+}
 
 /***** INFO PAGE *****/
 .infoPage .sideSection {
