--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_highContrast/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_highContrast/styles/appearance.css
@@ -756,8 +756,8 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 	background-color:transparent;
 	border:none;
 }
-
-.labelLine .groupBtn {
+/*
+.labelLine .groupBtn { /*browse by subject *//*
 	float:right;
 	text-align:right;
-}
+} */
