--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -769,3 +769,8 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 .licenseArea .messageArea {
 	background-color:#FFFFFF;
 }
+
+/***** without content header / e.g. AffiliationDetailPage *****/
+.withoutPageHeader {
+	padding-top:2em;
+}
