--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_highContrast/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_highContrast/styles/appearance.css
@@ -761,3 +761,8 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 	float:right;
 	text-align:right;
 } */
+
+/***** without content header / e.g. AffiliationDetailPage *****/
+.withoutPageHeader {
+	padding-top:2em;
+}
