--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -766,6 +766,11 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
     border-right-width: 2px !important;
 }
 
+.languageArea .readonlyInput {
+	background-color:transparent;
+	border:none;
+}
+
 .licenseArea .messageArea {
 	background-color:#FFFFFF;
 }
