--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_highContrast/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_highContrast/styles/appearance.css
@@ -766,3 +766,15 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 .withoutPageHeader {
 	padding-top:2em;
 }
+
+.coneLogo {
+	height:5.7272em;
+	display:none;
+}
+.coneMainMenu {
+	display:none;
+}
+.searchExportLogo {
+	height:5.7272em;
+	display:none;
+}
