--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/globalCSS/eSciDoc_core_em.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/globalCSS/eSciDoc_core_em.css
@@ -3889,3 +3889,8 @@ option {	/* fix for FF2 and floating contents */
 /*GENERAL DEFINITIONS*/
 /* distance for different input fields after top-border */
 .marginTExcl6p { margin-top:0.5454em; }
+
+.showAll {
+	overflow:visible !important;
+}
+
