--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_classic/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_classic/styles/appearance.css
@@ -784,3 +784,8 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 	height:5.7272em;
 	display:none;
 }
+
+/***** advanced search *****/
+.checkboxDoubleContainer .large_checkbox label {
+	white-space:normal;
+}
