Resolved http://jira.mpdl.mpg.de/browse/PUBMAN-2180.
Former-commit-id: 6c58c4d4afdecf2b3146d39a9394f5d2ca4fff92

--- a/pubman/pubman_presentation/src/main/webapp/browseBy/BrowseByPage.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/browseBy/BrowseByPage.jspf
@@ -68,7 +68,7 @@
 			 --%> 
 			<span class="huge_radioBtn full_area0">
 				<h:selectOneRadio id="selSelectDate" value="#{BrowseBySessionBean.dateMode}" onclick="submit(); fullItemReload();">										
-						<f:selectItems id="selDateOptions" value="#{BrowseBySessionBean.DATE_OPTIONS}"/> 
+						<f:selectItems id="selDateOptions" value="#{BrowseByPage.dateOptions}"/> 
 				</h:selectOneRadio>
 			</span> 
 		</span>
